--- a/Builds/Linux/Makefile.plugins
+++ b/Builds/Linux/Makefile.plugins
@@ -61,13 +61,31 @@ all: notify $(SUBDIRS)
 notify:
 	@echo "Building Open-Ephys Plugins"
 
+PLUGINNAME=$(shell echo $@ | rev | cut -d'/' -f-1 | rev)
+
 $(SUBDIRS):
-	@if [ -f $@/Makefile ]; then $(MAKE) -C $@ ; fi
+	@if [ -f $@/*.jucer ] && ([ -f $@/Source/Makefile ]); then \
+		echo "Found jucer project for" $(PLUGINNAME) "..."; \
+		$(MAKE) -C $@/Source clean ; \
+		$(MAKE) -C $@/Source TARGET:=$(PLUGINNAME).so;\
+	else if [ -f $@/Makefile ]; then \
+		$(MAKE) -C $@ ; fi \
+	fi
 
+# if there are a .jucer file in the plugin folder - try to find Makefile in the Source/ folder
 %::
-	@if [ -f $(PLUGIN_DIR)/$@/Makefile ]; then $(MAKE) -C $(PLUGIN_DIR)/$@ clean ; $(MAKE) -C $(PLUGIN_DIR)/$@ ; fi
+	@if [ -f $(PLUGIN_DIR)/$@/*.jucer ] && ([ -f $(PLUGIN_DIR)/$@/Source/Makefile ]); then \
+		echo "Found jucer project for" $(PLUGINNAME) "..."; \
+		$(MAKE) -C $(PLUGIN_DIR)/$@/Source clean ; \
+		$(MAKE) -C $(PLUGIN_DIR)/$@/Source TARGET:=$@.so; \
+	else if [ -f $(PLUGIN_DIR)/$@/Makefile ]; then \
+		$(MAKE) -C $(PLUGIN_DIR)/$@ clean ; \
+		$(MAKE) -C $(PLUGIN_DIR)/$@ ; fi \
+	fi
 
-	
 clean:
 	@echo Cleaning open-ephys plugins
 	@$(CLEANCMD)
+
+#plugin name from $SUBDIRS goal
+#$@ | rev | cut -d'/' -f-1 | rev; \
