--- a/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
@@ -42,7 +42,7 @@ GCC_WARN_UNDECLARED_SELECTOR = YES
 GCC_WARN_UNINITIALIZED_AUTOS = YES_AGGRESSIVE
 GCC_WARN_UNUSED_FUNCTION = YES
 GCC_WARN_UNUSED_VARIABLE = YES
-HEADER_SEARCH_PATHS = ../../../../Source/Plugins/Headers $(inherited)
+HEADER_SEARCH_PATHS = ../../../../Source/Plugins/Headers ../../../../JuceLibraryCode/modules ../../../../JuceLibraryCode $(inherited)
 INSTALL_PATH = $(HOME)/Applications/open-ephys.app/Contents/PlugIns
 MACOSX_DEPLOYMENT_TARGET = 10.9
 OTHER_LDFLAGS = $(inherited) -undefined dynamic_lookup
