Move HDF5 common methods to an external lib (Builds only on Windows for now)

--- a/.gitignore
+++ b/.gitignore
@@ -83,11 +83,13 @@ Builds/VisualStudio2013/Plugins/*/*.user
 Builds/VisualStudio2013/Plugins/*/*.suo
 Builds/VisualStudio2013/Plugins/*/*.sdf
 Builds/VisualStudio2013/Plugins/*/*.opensdf
-Builds/VisualStudio2013/Plugins/*/x64
-Builds/VisualStudio2013/Plugins/*/Debug
-Builds/VisualStudio2013/Plugins/*/Release
+Builds/VisualStudio2013/Plugins/**/x64
+Builds/VisualStudio2013/Plugins/**/Debug
+Builds/VisualStudio2013/Plugins/**/Release
+
 Builds/VisualStudio2013/Plugins/Debug
 Builds/VisualStudio2013/Plugins/Release
+Builds/VisualStudio2013/Plugins/x64
 
 # 5. Miscellanous generated files (Doxygen, etc.)
 Source/Docs/*
