--- a/Builds/VisualStudio2013/Plugins/PluginCommonLib_Debug64.props
+++ b/Builds/VisualStudio2013/Plugins/PluginCommonLib_Debug64.props
@@ -2,27 +2,28 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <GUIDir>..\..\x64\Debug64\bin</GUIDir>
+    <GUIDir>..\..\..\x64\Debug64\bin</GUIDir>
     <PluginDir>$(GUIDir)\plugins</PluginDir>
   </PropertyGroup>
   <PropertyGroup>
-    <_PropertySheetDisplayName>Plugin_Debug64</_PropertySheetDisplayName>
+    <_PropertySheetDisplayName>PluginCommonLib_Debug64</_PropertySheetDisplayName>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\..\JuceLibraryCode;..\..\..\..\JuceLibraryCode\modules;JuceLibraryCode/;..\..\..\..\Source\Plugins\Headers;..\..\..\..\Source\Plugins\CommonLibs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>OEPLUGIN;WIN32;_WINDOWS;DEBUG;_DEBUG;JUCE_API=__declspec(dllimport);JUCER_VS2013_78A5020=1;JUCE_APP_VERSION=0.3.5;JUCE_APP_VERSION_HEX=0x305;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\..\..\..\JuceLibraryCode;..\..\..\..\..\JuceLibraryCode\modules;JuceLibraryCode/;..\..\..\..\..\Source\Plugins\Headers;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;DEBUG;_DEBUG;JUCE_API=__declspec(dllimport);JUCER_VS2013_78A5020=1;JUCE_APP_VERSION=0.3.5;JUCE_APP_VERSION_HEX=0x305;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(GUIDir);$(OutDir)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir)</AdditionalLibraryDirectories>
       <AdditionalDependencies>open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreLinkEvent>
-      <Command>if not exist "$(PluginDir)" mkdir "$(PluginDir)"</Command>
+      <Command>
+      </Command>
     </PreLinkEvent>
     <PostBuildEvent>
-      <Command>copy /Y "$(OutDir)$(TargetFileName)" "$(PluginDir)\"</Command>
+      <Command>copy /Y "$(OutDir)$(TargetFileName)" "$(GUIDir)\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
