--- a/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
@@ -2,7 +2,7 @@
 MAC_PACKAGE_DIR = /opt/local
 
 // Pull in machine-specific settings from git-ignored file, if it exists.
-#include "Env.xcconfig"
+#include? "Env.xcconfig"
 
 ALWAYS_SEARCH_USER_PATHS = NO
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
