--- a/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
@@ -1,10 +1,12 @@
 // Defaults for values that might be overridden in Env.xcconfig
+JULIA_PATH = /Applications/Julia-0.5.app/Contents/Resources/julia
 MAC_PACKAGE_DIR = /opt/local
 
 // Pull in machine-specific settings from git-ignored file, if it exists.
 #include? "Env.xcconfig"
 
 ALWAYS_SEARCH_USER_PATHS = NO
+CLANG_ANALYZER_NONNULL = YES
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
 CLANG_CXX_LIBRARY = libc++
 CLANG_ENABLE_MODULES = NO
@@ -13,6 +15,7 @@ CLANG_LINK_OBJC_RUNTIME = NO
 CLANG_WARN_BOOL_CONVERSION = YES
 CLANG_WARN_CONSTANT_CONVERSION = YES
 CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES_ERROR
+CLANG_WARN_DOCUMENTATION_COMMENTS = NO
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_ENUM_CONVERSION = YES
 CLANG_WARN_INFINITE_RECURSION = YES
