--- a/Builds/MacOSX/Plugins/Config/Plugin_Debug.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin_Debug.xcconfig
@@ -1,8 +1,2 @@
 #include "Plugin.xcconfig"
-
-ENABLE_TESTABILITY = YES
-GCC_DYNAMIC_NO_PIC = NO
-GCC_INLINES_ARE_PRIVATE_EXTERN = NO
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG=1 _DEBUG=1
-MTL_ENABLE_DEBUG_INFO = YES
-ONLY_ACTIVE_ARCH = YES
+#include "Debug.xcconfig"
