Added Xcode project for OpenEphysHDF5Lib, which builds a shared library (libOpenEphysHDF5.dylib) and installs it in open-ephys.app/Contents/Frameworks.  On macOS, the KWIKFormat plugin now links against libOpenEphysHDF5.dylib.

--- a/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
@@ -1,6 +1,6 @@
 #include "Base.xcconfig"
 
 CONFIGURATION_BUILD_DIR = $(PROJECT_DIR)/../../build/$(CONFIGURATION)/open-ephys.app/Contents/PlugIns
-HEADER_SEARCH_PATHS = ../../../../JuceLibraryCode ../../../../JuceLibraryCode/modules ../../../../Source/Plugins/Headers $(inherited)
+HEADER_SEARCH_PATHS = ../../../../JuceLibraryCode ../../../../JuceLibraryCode/modules ../../../../Source/Plugins/Headers ../../../../Source/Plugins/CommonLibs $(inherited)
 INSTALL_PATH = $(HOME)/Applications/open-ephys.app/Contents/PlugIns
 WRAPPER_EXTENSION = bundle
